--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Professional App Developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/site-logo.png" />
     <link  rel="stylesheet"
